--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <div id="in-game" class="hidden">
       <div id="board-player" class="board">
         <div class="board-info">
-          <div class="board-info-name">Player 1</div>
-          <div class="board-info-lives">Lives: <span class="highlight-red">3</span></div>
+          <div class="board-info-name"></div>
+          <div class="board-info-notify"></div>
         </div>
         <canvas id="canvas-player" class="board-canvas"></canvas>
       </div>
       <div id="board-opponent" class="board hidden">
         <div class="board-info">
-            <div class="board-info-name">Player 2</div>
-            <div class="board-info-lives">Lives: <span class="highlight-red">2</span></div>
+            <div class="board-info-name"></div>
+            <div class="board-info-notify">Lives: <span class="highlight-red">2</span></div>
         </div>
         <canvas id="canvas-opponent" class="board-canvas"></canvas>
       </div>
