Handle disconnect in game setup state. Add functions to create popups programmatically.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div id="in-game" class="hidden">
+    <div id="in-game" class="in-game hidden">
       <div id="board-player" class="board">
         <div class="board-info">
           <div class="board-info-name"></div>
@@ -30,7 +30,6 @@
       </div>
     </div>
 
-
     <form id="register-form" class="popup hidden">
       <label class="title" for="name-input">You are</label>
       <input class="input" type="text" name="name-input" id="name-input" placeholder="Your name">
@@ -39,33 +38,6 @@
     <div id="available-users" class="popup hidden">
       <div class="title">Available Users</div>
       <div id="user-list" class="user-list"></div>
-    </div>
-    <div id="challenging-message" class="popup-background hidden">
-      <div class="popup popup-message">
-        <p class="message">Waiting for opponent's response...</p>
-        <button class="button button-red" type="button">Cancel</button>
-      </div>
-    </div>
-    <div id="challenging-reject" class="popup-background hidden">
-      <div class="popup popup-message">
-        <p class="message"></p>
-        <button class="button" type="button">Close</button>
-      </div>
-    </div>
-    <div id="challenging-cancel" class="popup-background hidden">
-      <div class="popup popup-message">
-        <p class="message"></p>
-        <button class="button" type="button">Close</button>
-      </div>
-    </div>
-    <div id="challenging-question" class="popup-background hidden">
-      <div class="popup popup-message">
-        <p class="message"></p>
-        <div class="button-group">
-          <button id="accept-btn" class="button m-r-md" type="button">Accept</button>
-          <button id="reject-btn" class="button button-red" type="button">Reject</button>
-        </div>
-      </div>
     </div>
     <script type="module" src="./js/script.js"></script>
   </body>
