Add random shot button.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <canvas id="canvas-opponent" class="board-canvas"></canvas>
         <div class="chat-message"></div>
       </div>
+      <button id="random-shot-button" class="random-shot-button hidden" type="button">Random shot</button>
     </div>
 
     <form id="register-form" class="popup hidden">
